fix: 블로그 멤버 닉네임 overflow 설정
hidden으로 변경

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -66,6 +66,7 @@
 
 .member-list-item-nickname {
     display: block;
+    overflow: hidden;
     font-size: x-large;
     margin: 10px;
     transition: all 0.3s;
